added start with docker compose
