# docs/swagger.json
@@ -30,6 +30,41 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Create new subscription for user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "subscriptions"
+                ],
+                "summary": "Create subscription",
+                "parameters": [
+                    {
+                        "description": "Subscription data",
+                        "name": "subscription",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.CreateSubscriptionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/subscriptions/delete": {
@@ -162,6 +197,28 @@
         }
     },
     "definitions": {
+        "handler.CreateSubscriptionRequest": {
+            "type": "object",
+            "properties": {
+                "end_month": {
+                    "description": "optional",
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "service_name": {
+                    "type": "string"
+                },
+                "start_month": {
+                    "description": "\"07-2025\"",
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.TotalCostResponse": {
             "type": "object",
             "properties": {
